--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "publish-case-study": "node scripts/publish-case-study.js",
+    "publish-app": "node scripts/publish-app.js",
+    "publish-mechanism": "node scripts/publish-mechanism.js",
+    "publish-research": "node scripts/publish-research.js",
+    "publish-campaign": "node scripts/publish-campaign.js"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -14,11 +19,17 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "server-only": "^0.0.1",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
