--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "tailwindcss": "^4.1.18",
+    "three": "^0.182.0",
     "typescript": "^5.9.3"
   }
 }
