--- a/package.json
+++ b/package.json
@@ -11,27 +11,48 @@
     "publish-app": "node scripts/publish-app.js",
     "publish-mechanism": "node scripts/publish-mechanism.js",
     "publish-research": "node scripts/publish-research.js",
-    "publish-campaign": "node scripts/publish-campaign.js"
+    "publish-campaign": "node scripts/publish-campaign.js",
+    "sync-docs": "npx tsx --env-file-if-exists=.env.local scripts/sync-docs.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.26",
+    "@ai-sdk/react": "^3.0.81",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@streamdown/cjk": "^1.0.2",
+    "@streamdown/code": "^1.0.2",
+    "@streamdown/math": "^1.0.2",
+    "@streamdown/mermaid": "^1.0.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "ai": "^6.0.79",
     "autoprefixer": "^10.4.23",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.1",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
+    "openai": "^6.21.0",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
+    "streamdown": "^2.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "shadcn": "^3.8.4",
+    "tw-animate-css": "^1.4.0"
   }
 }
