update gg content

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ OPENAI_API_KEY=sk-...
 
 # OpenAI Vector Store ID — created by `npm run sync-docs` on first run
 OPENAI_VECTOR_STORE_ID=vs_...
+
+# GitHub Personal Access Token — required for content sync 
+# read access
+GITHUB_TOKEN=
