--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "publish-research": "npx tsx scripts/publish-research.ts",
     "publish-campaign": "npx tsx scripts/publish-campaign.ts",
     "publish-all": "sh scripts/publish-all-issues.sh",
-    "sync-docs": "npx tsx --env-file-if-exists=.env.local scripts/sync-docs.ts"
+    "sync-docs": "npx tsx --env-file-if-exists=.env.local scripts/sync-docs.ts",
+    "banner:pick": "npx tsx scripts/open-banner.ts",
+    "banner:auto": "npx tsx scripts/generate-banners.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.26",
@@ -53,6 +55,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "playwright": "^1.58.2",
     "shadcn": "^3.8.4",
     "tw-animate-css": "^1.4.0"
   }
