--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.26",
     "@ai-sdk/react": "^3.0.81",
+    "@next/third-parties": "^16.1.6",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@streamdown/cjk": "^1.0.2",
